change renovated input to select

--- a/index.html
+++ b/index.html
@@ -144,7 +144,10 @@
                     </div>
                     <div>
                         <label for="renovated">Renovated</label>
-                        <input type="number" id="renovated" name="renovated" class="w-full border rounded p-2" placeholder="0">
+                        <select name="renovated" class="w-full border rounded p-2" id="renovated">
+                            <option value="0">No</option>
+                            <option value="1">Yes</option>
+                        </select>
                     </div>
                 </div>
             </div>
